# Convex-Hull-Algorithms

./: BasicIO.cpp  BasicIO.h  CMakeLists.txt  CONTRIBUTING.md  GeomImage.cpp  GeomImage.h  Graham's Polygon.txt  Jarvis' Polygon.txt  Line.cpp  Line.h  Point.cpp  Point.h  Polygon.cpp  README.md  Random.cpp  SECURITY.md  main.cpp
.github/: CODEOWNERS
.github/workflows/: c-cpp.yml
BasicIO/: BasicIO.cpp  BasicIO.hpp  CMakeLists.txt
GeomImage/: CMakeLists.txt  GeomImage.cpp  GeomImage.hpp
Line/: CMakeLists.txt  Line.cpp  Line.hpp
Point/: CMakeLists.txt  Point.cpp  Point.hpp
Polygon/: CMakeLists.txt  Polygon.cpp  Polygon.hpp
src/: CMakeLists.txt  Graham's Polygon.txt  Jarvis' Polygon.txt  Points.txt  Random.cpp  main.cpp
